# pantrypath

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_PROMPT.md  PLAN.md  README.md  _subs_fetched.yaml  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DESIGN.md
pantrypath/: __init__.py  cli.py  eval.py  graph.py  recipe.py  solver.py
pantrypath/data/: eval_truth.yaml  substitutions.yaml
tests/: test_app.py  test_cli.py  test_data_counts.py  test_eval.py  test_recipe.py  test_solver.py  test_topk.py  test_validation.py
